k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 5173
  type: NodePort
